navbar translation complete, new LanguageSwitch component complete, changes in responsive styles.

--- a/mySvgIcons.html
+++ b/mySvgIcons.html
@@ -1,4 +1,4 @@
- <div>
+<!-- <div>
             <svg class="svg-icon" viewBox="0 0 128 128">
               <path
                 fill="#E44D26"
@@ -272,4 +272,4 @@
               ></path>
             </svg>
             <p>ExpressJS</p>
-          </div>
+          </div> -->
