--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-16x16.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-32-32.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-192x192.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-512x512.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/apple-touch-icon.png" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -19,7 +12,13 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/icons/site.webmanifest" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-16x16.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-32x32.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/android-chrome-192x192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/android-chrome-512x512.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/apple-touch-icon.png" />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -30,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>V & P</title>
+    <title>Vagner Petel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
