--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Vagner Petel - Full Stack Web Developer Portfolio showcasing my skills, projects, and expertise in building modern and responsive web applications. Explore my work and contact me for collaboration opportunities."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -14,10 +14,26 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/icons/site.webmanifest" />
     <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-16x16.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon-32x32.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/android-chrome-192x192.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/android-chrome-512x512.png" />
+    <link
+      rel="icon"
+      sizes="16x16"
+      href="%PUBLIC_URL%/icons/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      sizes="32x32"
+      href="%PUBLIC_URL%/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="%PUBLIC_URL%/icons/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      sizes="512x512"
+      href="%PUBLIC_URL%/icons/android-chrome-512x512.png"
+    />
     <link rel="icon" href="%PUBLIC_URL%/icons/apple-touch-icon.png" />
 
     <!--
